tests/ui/fail_stream_inbound_before_codec.stderr
error[E0599]: no method named `inbound` found for struct `PipelineBuilder<rs_netty::pipeline::state::Start, rs_netty::pipeline::builder::Missing, Identity, Identity, rs_netty::pipeline::builder::Missing, Identity, (), (), ()>` in the current scope
  --> tests/ui/fail_stream_inbound_before_codec.rs:18:24
   |
18 |     let _ = pipeline().inbound(Logging);
   |                        ^^^^^^^ private field, not a method
